@@ -1,8 +1,58 @@
 # Nacos 源码学习大纲
 
-> 版本：Nacos 2.x  
+> 版本：Nacos 2.x（主线）/ 3.x（演进方向）  
+> 更新时间：2026-03-05  
 > 目标：生产环境核心原理 + 高频面试考点  
 > 模块路径参考：`/data/workspace/nacos`
+
+---
+
+## ⚡ 2026 年时效性速查
+
+> 快速判断哪些值得深入、哪些了解即可、哪些已经过时。
+
+### 🔥 核心重点（生产 + 面试必考）
+
+| 章节 | 核心点 | 重要程度 |
+|------|--------|----------|
+| §3 配置中心 | gRPC 推送、Dump 机制、长轮询原理 | ⭐⭐⭐⭐⭐ |
+| §4 服务注册发现 | 临时/持久实例、注册流程、Distro 分片 | ⭐⭐⭐⭐⭐ |
+| §5 一致性协议 | JRaft vs Distro 选型、Raft 选举 | ⭐⭐⭐⭐⭐ |
+| §6 gRPC 通信 | 连接管理、请求处理链、重连机制 | ⭐⭐⭐⭐ |
+| §8 健康检查 | 保护模式、心跳超时参数 | ⭐⭐⭐⭐ |
+| §9 推送机制 | PushDelayTask 合并、重试退避 | ⭐⭐⭐⭐ |
+| §10 鉴权安全 | Token 鉴权、命名空间隔离、**安全加固** | ⭐⭐⭐⭐ |
+| §14 TPS 限流 | 滑动窗口、MONITOR/INTERCEPT 模式 | ⭐⭐⭐ |
+
+### ⚠️ 了解即可（原理理解，生产较少直接涉及）
+
+| 章节 | 说明 |
+|------|------|
+| §2 启动流程 | 面试偶尔问，重点是 ProtocolManager 初始化顺序 |
+| §7 集群管理 | 节点发现方式、成员状态机，生产运维必知 |
+| §11 存储层 | Derby vs MySQL 选型，生产必用 MySQL |
+| §15 能力协商 | 版本兼容机制，理解即可，不常考 |
+
+### ❌ 已过时 / 不推荐深入
+
+| 内容 | 过时原因 | 替代方案 |
+|------|----------|----------|
+| **1.x HTTP 心跳**（`InstanceController.beat()`） | 2.x 已改为 gRPC 连接保活，1.x 仅作兼容保留 | gRPC 连接断开即摘除 |
+| **1.x UDP Push** | 2.x 已被 gRPC 双向流完全替代 | `RpcPushService` gRPC 推送 |
+| **1.x 长轮询**（HTTP Long Polling） | 2.x 客户端默认走 gRPC 主动推送，长轮询仅兼容老客户端 | `RpcConfigChangeNotifier` |
+| **Derby 嵌入式数据库** | 生产环境不可用，仅用于单机测试 | 外部 MySQL 集群 |
+| **`/v1/` HTTP API**（部分） | Nacos 3.x 已将核心 API 迁移至 `/v3/`，`/v1/` 标记为 deprecated | `/v2/` → `/v3/` API |
+| **`nacos.core.auth.default.token.secret.key`（默认密钥）** | 已知安全漏洞，默认密钥被公开利用 | 必须自定义强密钥 |
+
+### 🆕 2026 年新增关注点（Nacos 3.x 演进）
+
+| 方向 | 说明 |
+|------|------|
+| **Nacos 3.x 架构重构** | 存储层解耦（支持 PostgreSQL/TiDB）、API 统一为 `/v3/` |
+| **AI 配置管理** | 与 Spring AI / LLM 配置集成，动态模型参数下发 |
+| **多活容灾** | 跨 IDC 数据同步、异地多活部署方案 |
+| **K8s 原生集成** | Operator 部署、与 Kubernetes Service 双向同步 |
+| **安全加固** | mTLS 双向认证、细粒度 RBAC、审计日志 |
 
 ---
 
@@ -10,19 +60,20 @@
 
 1. [Nacos 整体架构概览](#1-nacos-整体架构概览)
 2. [启动流程与模块初始化](#2-启动流程与模块初始化)
-3. [配置中心（Config）核心原理](#3-配置中心config核心原理)
-4. [服务注册与发现（Naming）核心原理](#4-服务注册与发现naming核心原理)
-5. [一致性协议：CP（JRaft）与 AP（Distro）](#5-一致性协议cpjraft与apdistro)
-6. [客户端通信机制：gRPC 长连接](#6-客户端通信机制grpc-长连接)
+3. [配置中心（Config）核心原理](#3-配置中心config核心原理) 🔥
+4. [服务注册与发现（Naming）核心原理](#4-服务注册与发现naming核心原理) 🔥
+5. [一致性协议：CP（JRaft）与 AP（Distro）](#5-一致性协议cpjraft与apdistro) 🔥
+6. [客户端通信机制：gRPC 长连接](#6-客户端通信机制grpc-长连接) 🔥
 7. [集群管理与节点发现](#7-集群管理与节点发现)
-8. [健康检查机制](#8-健康检查机制)
-9. [推送机制（Push）](#9-推送机制push)
-10. [鉴权与安全](#10-鉴权与安全)
+8. [健康检查机制](#8-健康检查机制) 🔥
+9. [推送机制（Push）](#9-推送机制push) 🔥
+10. [鉴权与安全（2026 安全加固重点）](#10-鉴权与安全) 🔥
 11. [存储层设计](#11-存储层设计)
-12. [生产环境核心配置与调优](#12-生产环境核心配置与调优)
-13. [高频面试题汇总](#13-高频面试题汇总)
+12. [生产环境核心配置与调优](#12-生产环境核心配置与调优) 🔥
+13. [高频面试题汇总](#13-高频面试题汇总) 🔥
 14. [流量控制插件：TPS 限流与连接控制](#14-流量控制插件tps-限流与连接控制)
 15. [能力协商机制（Ability）](#15-能力协商机制ability)
+16. [Nacos 3.x 演进方向（2026 新增）](#16-nacos-3x-演进方向2026-新增) 🆕
 
 ---
 
@@ -57,15 +108,20 @@ nacos-console (入口)
     └── nacos-client       (客户端SDK)
 ```
 
-### 1.3 Nacos 2.x vs 1.x 核心变化
+### 1.3 版本演进对比 🔥
 
-| 对比项 | 1.x | 2.x |
-|--------|-----|-----|
-| 通信协议 | HTTP + UDP | gRPC 长连接（主）+ HTTP（兼容） |
-| 服务端口 | 8848 | 8848（HTTP）+ 9848（gRPC）+ 9849（gRPC集群） |
-| 推送方式 | UDP 推送 | gRPC 双向流推送 |
-| 心跳方式 | HTTP 定时心跳 | gRPC 连接保活 |
-| 性能 | 较低 | 大幅提升（连接数、TPS） |
+| 对比项 | 1.x ❌已过时 | 2.x ✅当前主流 | 3.x 🆕演进方向 |
+|--------|------------|--------------|--------------|
+| 通信协议 | HTTP + UDP | gRPC 长连接（主）+ HTTP（兼容） | gRPC（主）+ HTTP/3（探索） |
+| 服务端口 | 8848 | 8848（HTTP）+ 9848（gRPC）+ 9849（gRPC集群） | 同 2.x，新增管理端口 |
+| 推送方式 | UDP 推送 ❌ | gRPC 双向流推送 | gRPC 双向流 + 增量推送 |
+| 心跳方式 | HTTP 定时心跳 ❌ | gRPC 连接保活 | gRPC 连接保活 |
+| 存储支持 | MySQL/Derby | MySQL/Derby | MySQL/PostgreSQL/TiDB |
+| API 风格 | `/v1/` | `/v1/`（兼容）+ `/v2/` | `/v3/`（统一 REST） |
+| 安全机制 | 简单 Token | JWT Token + 命名空间隔离 | mTLS + RBAC + 审计日志 |
+| 性能 | 较低 | 大幅提升（百万级实例） | 进一步优化（千万级） |
+
+> ⚠️ **2026 年生产建议**：新项目直接使用 Nacos 2.3+，禁止在生产环境使用 1.x；关注 3.x GA 版本。
 
 ---
 
@@ -125,6 +181,9 @@ SpringBoot 启动
 
 ## 3. 配置中心（Config）核心原理
 
+> 🔥 **2026 核心重点**：gRPC 推送（2.x 主流）、Dump 机制、灰度发布是生产和面试必考点。  
+> ⚠️ **长轮询（Long Polling）**：2.x 客户端默认走 gRPC，长轮询仅用于兼容 1.x 老客户端，**新项目无需深入**。
+
 ### 3.1 配置数据模型
 
 ```
@@ -169,7 +228,7 @@ LongPollingService / RpcConfigChangeNotifier
     └── 通知订阅该配置的客户端
 ```
 
-### 3.3 长轮询（Long Polling）机制 ⭐⭐⭐
+### 3.3 长轮询（Long Polling）机制 ⭐⭐⭐ — ⚠️ 1.x 兼容，2.x 已被 gRPC 推送替代
 
 **核心类**：`LongPollingService.java`（`config/service/`）
 
@@ -236,6 +295,9 @@ Follower 节点执行 dump，更新本地缓存
 ---
 
 ## 4. 服务注册与发现（Naming）核心原理
+
+> 🔥 **2026 核心重点**：临时/持久实例区别、gRPC 注册流程、Distro 分片机制是面试必考三连问。  
+> ❌ **1.x HTTP 心跳**（`InstanceController.beat()`）：2.x 已改为 gRPC 连接保活，仅作兼容保留，不需深入。
 
 ### 4.1 服务数据模型
 
@@ -346,6 +408,9 @@ DistroProtocol.sync()
 ---
 
 ## 5. 一致性协议：CP（JRaft）与 AP（Distro）
+
+> 🔥 **2026 核心重点**：CP vs AP 选型逻辑、Raft 选举流程、Distro 数据分片是面试高频考点。  
+> 💡 **理解重点**：不需要背 Raft 论文，重点理解 Nacos 为什么同时用两种协议，以及各自适用场景。
 
 ### 5.1 协议选择策略
 
@@ -646,6 +711,8 @@ RpcPushService.pushWithCallback()
 
 ## 10. 鉴权与安全
 
+> 🔥 **2026 安全加固重点**：Nacos 历史上曾因默认密钥、未鉴权接口暴露导致多起安全事件，生产环境安全配置是重中之重。
+
 ### 10.1 鉴权架构
 
 ```
@@ -681,16 +748,58 @@ AuthFilter 验证 Token 有效性
 - 不同命名空间（namespace）的配置和服务完全隔离
 - 生产环境建议按环境（dev/test/prod）划分命名空间
 
+### 10.4 ⚠️ 2026 年生产安全必做清单 🔥
+
+> 以下配置项在生产环境**必须**执行，否则存在严重安全风险：
+
+```properties
+# ✅ 1. 开启鉴权（默认关闭！）
+nacos.core.auth.enabled=true
+nacos.core.auth.system.type=nacos
+
+# ✅ 2. 自定义 Token 密钥（默认密钥已被公开，存在已知漏洞）
+# 必须使用 Base64 编码的 32 位以上随机字符串
+nacos.core.auth.plugin.nacos.token.secret.key=<自定义强密钥，Base64编码>
+
+# ✅ 3. 自定义身份标识（防止伪造集群节点请求）
+nacos.core.auth.server.identity.key=<自定义key>
+nacos.core.auth.server.identity.value=<自定义value>
+
+# ✅ 4. 关闭匿名访问（2.2.x+ 支持）
+nacos.core.auth.enable.userAgentAuthWhite=false
+
+# ✅ 5. 生产环境禁止暴露 9848/9849 端口到公网
+# 通过防火墙/安全组限制，仅允许应用服务器访问
+```
+
+**已知安全漏洞（CVE）**：
+- `CVE-2021-29441`：未鉴权访问用户管理接口
+- `CVE-2023-44270`：默认 Token 密钥导致任意用户伪造
+- 建议定期关注 [Nacos Security Advisories](https://github.com/alibaba/nacos/security/advisories)
+
+### 10.5 🆕 Nacos 3.x 安全增强（演进方向）
+
+| 特性 | 说明 |
+|------|------|
+| **mTLS 双向认证** | 客户端与服务端互相验证证书，防止中间人攻击 |
+| **细粒度 RBAC** | 支持按 namespace/group/dataId 级别授权 |
+| **审计日志** | 记录所有配置变更、登录操作，满足合规要求 |
+| **密钥轮换** | 支持 Token 密钥热更新，无需重启 |
+
 ---
 
 ## 11. 存储层设计
 
+> ⚠️ **Derby 已过时**：嵌入式 Derby 仅用于单机测试，生产环境**必须**使用外部 MySQL。  
+> 🆕 **Nacos 3.x**：存储层解耦，计划支持 PostgreSQL、TiDB 等数据库。
+
 ### 11.1 配置存储
 
-| 存储方式 | 适用场景 | 实现类 |
-|----------|----------|--------|
-| 嵌入式 Derby | 单机/集群（内嵌） | `LocalDataSourceServiceImpl` |
-| 外部 MySQL | 生产集群（推荐） | `ExternalDataSourceServiceImpl` |
+| 存储方式 | 适用场景 | 实现类 | 2026 建议 |
+|----------|----------|--------|-----------|
+| 嵌入式 Derby | 单机测试 | `LocalDataSourceServiceImpl` | ❌ 禁止生产使用 |
+| 外部 MySQL | 生产集群 | `ExternalDataSourceServiceImpl` | ✅ 推荐，主从双库 |
+| PostgreSQL（3.x） | 生产集群 | 3.x 新增 | 🆕 关注 3.x GA |
 
 **关键表**：
 - `config_info`：配置主表
@@ -716,6 +825,8 @@ AuthFilter 验证 Token 有效性
 
 ## 12. 生产环境核心配置与调优
 
+> 🔥 **2026 生产重点**：安全配置 > 性能调优，先保证安全再谈性能。
+
 ### 12.1 集群部署建议
 
 ```properties
@@ -725,6 +836,16 @@ AuthFilter 验证 Token 有效性
 192.168.1.3:8848
 
 # 推荐奇数节点（3/5/7），满足 Raft 多数派要求
+# 2026 建议：生产最少 3 节点，核心业务 5 节点
+```
+
+**K8s 部署（2026 推荐）**：
+```yaml
+# 使用官方 Helm Chart 或 Nacos Operator
+helm repo add nacos https://nacos-group.github.io/nacos-k8s/
+helm install nacos nacos/nacos \
+  --set global.mode=cluster \
+  --set mysql.external=true
 ```
 
 ### 12.2 数据库配置（MySQL）
@@ -733,8 +854,8 @@ AuthFilter 验证 Token 有效性
 # application.properties
 spring.datasource.platform=mysql
 db.num=2  # 主从双数据库
-db.url.0=jdbc:mysql://master:3306/nacos?...
-db.url.1=jdbc:mysql://slave:3306/nacos?...
+db.url.0=jdbc:mysql://master:3306/nacos?characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=UTC
+db.url.1=jdbc:mysql://slave:3306/nacos?characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=UTC
 db.user=nacos
 db.password=nacos
 ```
@@ -747,121 +868,168 @@ db.password=nacos
 -XX:+UseG1GC
 -XX:MaxGCPauseMillis=200
 -XX:+HeapDumpOnOutOfMemoryError
+# 2026 补充：JDK 17+ 推荐使用 ZGC
+# -XX:+UseZGC -XX:ZAllocationSpikeTolerance=5
 ```
 
 ### 12.4 关键配置参数
 
 ```properties
-# 开启鉴权
+# ✅ 安全配置（2026 必做，见第10章）
 nacos.core.auth.enabled=true
-nacos.core.auth.plugin.nacos.token.secret.key=<自定义密钥>
+nacos.core.auth.plugin.nacos.token.secret.key=<自定义强密钥>
+nacos.core.auth.server.identity.key=<自定义key>
+nacos.core.auth.server.identity.value=<自定义value>
 
-# 连接数限制
-nacos.remote.server.rpc.tls.enable=false
+# 连接数限制（根据实际规模调整）
+nacos.remote.server.rpc.tls.enable=false  # 内网可关闭TLS，公网必须开启
 
-# 配置 dump 间隔（秒）
+# 配置 dump 线程数（配置变更频繁时适当增大）
 dump.change.worker.count=10
 
 # 服务端健康检查线程数
 healthCheckProcessorThreadCount=1
+
+# gRPC 连接超时（ms）
+remote.server.grpc.sdk.keep-alive-time=6000
+remote.server.grpc.sdk.keep-alive-timeout=10000
 ```
 
 ### 12.5 监控指标
 
 Nacos 集成 Prometheus + Micrometer，关键指标：
 
-| 指标 | 说明 |
-|------|------|
-| `nacos_monitor_service_count` | 服务数量 |
-| `nacos_monitor_ip_count` | 实例数量 |
-| `nacos_monitor_subscriber_count` | 订阅者数量 |
-| `nacos_monitor_long_polling` | 长轮询连接数 |
-| `nacos_grpc_connection_count` | gRPC 连接数 |
+| 指标 | 说明 | 告警建议 |
+|------|------|----------|
+| `nacos_monitor_service_count` | 服务数量 | 突增告警 |
+| `nacos_monitor_ip_count` | 实例数量 | 突降告警（可能大量下线） |
+| `nacos_monitor_subscriber_count` | 订阅者数量 | 监控趋势 |
+| `nacos_monitor_long_polling` | 长轮询连接数 | 过高说明有老客户端 |
+| `nacos_grpc_connection_count` | gRPC 连接数 | 接近上限时扩容 |
+| `nacos_config_ops_total` | 配置操作次数 | 异常写入告警 |
+
+### 12.6 🆕 2026 年生产最佳实践补充
+
+1. **禁止公网暴露**：9848/9849 端口仅允许应用服务器访问，8848 控制台加 IP 白名单
+2. **配置加密**：敏感配置（数据库密码等）使用 Nacos 配置加密插件或外部 KMS
+3. **多环境隔离**：dev/test/staging/prod 使用独立 Nacos 集群，而非命名空间隔离
+4. **备份策略**：定期备份 MySQL `config_info` 表，保留至少 30 天历史
+5. **版本锁定**：客户端与服务端版本差距不超过 1 个大版本
 
 ---
 
 ## 13. 高频面试题汇总
 
+> 🔥 **2026 面试趋势**：从"背原理"转向"结合场景"，面试官更关注你是否在生产中踩过坑。
+
 ### 13.1 配置中心相关
 
 **Q1：Nacos 配置中心如何实现配置的实时推送？**
 
-> 1.x：长轮询（Long Polling）。客户端发起 HTTP 请求，服务端挂起 29.5 秒，配置变更时立即响应。
-> 2.x：gRPC 双向流主动推送。服务端配置变更后，通过 `RpcConfigChangeNotifier` 主动推送给订阅的客户端，延迟更低。
+> **2.x（当前主流）**：gRPC 双向流主动推送。服务端配置变更后，通过 `RpcConfigChangeNotifier` 主动推送给订阅的客户端，延迟更低（毫秒级）。  
+> **1.x（了解即可）**：长轮询（Long Polling）。客户端发起 HTTP 请求，服务端挂起 29.5 秒，配置变更时立即响应。  
+> ⚠️ **2026 面试注意**：直接回答 gRPC 推送，再补充长轮询是 1.x 兼容方案，体现版本意识。
 
 **Q2：Nacos 配置中心的 Dump 机制是什么？有什么作用？**
 
-> Dump 机制将数据库中的配置同步到本地磁盘和内存缓存（CacheItem + MD5）。
+> Dump 机制将数据库中的配置同步到本地磁盘和内存缓存（CacheItem + MD5）。  
 > 作用：① 减少数据库查询压力；② 数据库故障时提供降级保障；③ 长轮询通过比对内存中的 MD5 快速判断配置是否变更。
 
 **Q3：Nacos 集群中配置如何同步？**
 
 > Leader 节点收到配置变更后，通过 `AsyncNotifyService` 异步通知所有 Follower 节点执行 dump，更新本地缓存。配置数据通过 JRaft 保证强一致性。
 
+**Q4（2026 新增）：Nacos 配置中心如何保证安全？生产中踩过哪些坑？**
+
+> ① 默认密钥漏洞（CVE-2023-44270）：必须自定义 `token.secret.key`；  
+> ② 默认鉴权关闭：必须设置 `nacos.core.auth.enabled=true`；  
+> ③ 端口暴露：9848/9849 不能暴露公网；  
+> ④ 敏感配置明文存储：使用配置加密插件或 KMS 集成。
+
 ### 13.2 服务注册发现相关
 
-**Q4：Nacos 临时实例和持久实例的区别？**
+**Q5：Nacos 临时实例和持久实例的区别？**
 
-> 见 4.2 节对比表。核心区别：临时实例用 AP（Distro），客户端心跳维活，宕机自动摘除；持久实例用 CP（JRaft），服务端主动探测，宕机标记不健康但不删除。
+> 见 §4.2 对比表。核心区别：临时实例用 AP（Distro），客户端心跳维活，宕机自动摘除；持久实例用 CP（JRaft），服务端主动探测，宕机标记不健康但不删除。
 
-**Q5：Nacos 服务注册的流程是什么？**
+**Q6：Nacos 服务注册的流程是什么？**
 
-> 见 4.3 节。2.x 通过 gRPC 长连接注册，服务端将实例绑定到 Client（连接维度），连接断开时自动清理临时实例。
+> 见 §4.3。2.x 通过 gRPC 长连接注册，服务端将实例绑定到 Client（连接维度），连接断开时自动清理临时实例。
 
-**Q6：Nacos 的 Distro 协议是如何工作的？**
+**Q7：Nacos 的 Distro 协议是如何工作的？**
 
 > Distro 是 AP 协议，核心思想是数据分片：每个节点只负责一部分数据（按客户端 IP 哈希分配），节点间异步同步。写请求若不归属当前节点，则转发给负责节点。节点启动时从其他节点拉取全量数据。
 
-**Q7：Nacos 保护模式是什么？**
+**Q8：Nacos 保护模式是什么？**
 
 > 当健康实例比例低于阈值（默认 **70%**，`SwitchDomain.distroThreshold = 0.7F`）时，Nacos 停止摘除不健康实例，防止网络分区时大量实例被误删，保护服务可用性。该阈值可通过控制台或 API 动态调整。
 
+**Q9（2026 新增）：Nacos 与 Eureka、Consul、Zookeeper 的核心区别？**
+
+> | 对比项 | Nacos | Eureka | Consul | Zookeeper |
+> |--------|-------|--------|--------|-----------|
+> | 一致性 | AP+CP 可选 | AP | CP | CP |
+> | 健康检查 | 客户端心跳+服务端探测 | 客户端心跳 | 服务端探测 | 临时节点 |
+> | 配置中心 | ✅ 内置 | ❌ | ✅ | ❌ |
+> | 维护状态 | 活跃 | 停止维护 ❌ | 活跃 | 活跃 |
+> 
+> **2026 建议**：Eureka 已停止维护，新项目不推荐；Nacos 是国内微服务首选。
+
 ### 13.3 一致性协议相关
 
-**Q8：Nacos 为什么同时使用 CP 和 AP 两种协议？**
+**Q10：Nacos 为什么同时使用 CP 和 AP 两种协议？**
 
 > 不同数据对一致性要求不同：配置数据和持久实例需要强一致（CP/JRaft），临时实例需要高可用（AP/Distro）。Nacos 通过 `ProtocolManager` 统一管理两种协议，根据数据类型选择对应协议。
 
-**Q9：JRaft 的 Raft 选举流程？**
+**Q11：JRaft 的 Raft 选举流程？**
 
 > ① Follower 超时未收到 Leader 心跳，转为 Candidate；② Candidate 向所有节点发送 RequestVote；③ 获得超过半数投票后成为 Leader；④ Leader 定期发送心跳维持地位。
 
-**Q10：Nacos 2.x 相比 1.x 有哪些核心改进？**
+**Q12：Nacos 2.x 相比 1.x 有哪些核心改进？**
 
 > ① 通信协议从 HTTP+UDP 升级为 gRPC 长连接，性能大幅提升；② 服务端主动 Push 替代长轮询，延迟更低；③ 引入 Client 概念（连接维度），连接断开自动清理实例；④ 支持更大规模的服务实例（百万级）。
 
 ### 13.4 生产问题排查
 
-**Q11：Nacos 集群脑裂如何处理？**
+**Q13：Nacos 集群脑裂如何处理？**
 
 > JRaft 通过 Raft 多数派机制避免脑裂：只有获得超过半数节点确认的 Leader 才能提交日志。网络分区时，少数派分区无法选出 Leader，停止写入，保证数据一致性。
 
-**Q12：Nacos 客户端配置拉取失败如何降级？**
+**Q14：Nacos 客户端配置拉取失败如何降级？**
 
 > 客户端本地有快照缓存（`${user.home}/nacos/config/`），服务端不可用时从本地快照加载配置，保证服务不中断。
+
+**Q15（2026 新增）：Nacos 在 K8s 环境下有哪些注意事项？**
+
+> ① Pod IP 变化问题：使用 Service DNS 而非 Pod IP 注册；  
+> ② 健康检查与 K8s Readiness Probe 协同：避免双重摘除；  
+> ③ 配置热更新与 ConfigMap 的选择：Nacos 适合动态配置，ConfigMap 适合静态配置；  
+> ④ 推荐使用 Nacos Operator 或 Helm Chart 部署，而非手动管理。
 
 ---
 
 ## 源码阅读路径建议
+
+> 🔥 **2026 建议**：优先掌握 §3/§4/§5/§6，这四章覆盖 80% 的面试考点。
 
 ### 第一阶段：基础架构（1-2天）
 1. 阅读 `StartingApplicationListener` 了解启动流程
 2. 阅读 `ServerMemberManager` 了解集群管理
 3. 阅读 `BaseGrpcServer` / `GrpcRequestAcceptor` 了解 gRPC 通信
 
-### 第二阶段：配置中心（2-3天）
+### 第二阶段：配置中心（2-3天）🔥
 1. `ConfigController` → `ConfigOperationService` → 数据库写入
-2. `LongPollingService` 长轮询核心逻辑
+2. `RpcConfigChangeNotifier` gRPC 推送（**2.x 主流，优先看**）
 3. `DumpService` 配置 dump 机制
-4. `RpcConfigChangeNotifier` gRPC 推送
+4. `LongPollingService` 长轮询（了解即可，1.x 兼容）
 
-### 第三阶段：服务注册发现（2-3天）
+### 第三阶段：服务注册发现（2-3天）🔥
 1. `InstanceRequestHandler` → `EphemeralClientOperationServiceImpl`
 2. `DistroProtocol` → `DistroDelayTask` → `DistroSyncChangeTask`
 3. `ClientBeatCheckTaskV2` 心跳检测
 4. `RpcPushService` 推送机制
 
-### 第四阶段：一致性协议（2-3天）
+### 第四阶段：一致性协议（2-3天）🔥
 1. `JRaftServer` → `NacosStateMachine` JRaft 核心
 2. `DistroProtocol` Distro 协议完整流程
 3. `ProtocolManager` 协议管理器
@@ -1241,5 +1409,88 @@ Member.setAbilities(serverAbilities);
 
 ---
 
-*文档生成时间：2026-03-05*  
-*对应源码版本：Nacos 2.x*
+## 16. Nacos 3.x 演进方向（2026 新增）🆕
+
+> 🆕 **关注度**：Nacos 3.x 目前处于 RC/GA 阶段，了解演进方向有助于技术选型和面试加分。
+
+### 16.1 核心架构变化
+
+| 变化点 | 2.x | 3.x |
+|--------|-----|-----|
+| **API 风格** | `/v1/`（主）+ `/v2/` | `/v3/`（统一 REST，`/v1/` 标记 deprecated） |
+| **存储层** | MySQL / Derby | 存储层解耦，支持 MySQL / PostgreSQL / TiDB |
+| **控制台** | Vue 2 | Vue 3 重构，支持暗色模式 |
+| **配置加密** | 需插件 | 内置配置加密支持 |
+| **RBAC** | 简单用户/角色 | 细粒度权限（namespace/group/dataId 级别） |
+| **审计日志** | 无 | 内置操作审计日志 |
+
+### 16.2 存储层解耦（重点）
+
+3.x 将存储层抽象为 `StoragePlugin` SPI，支持多种数据库：
+
+```
+StoragePlugin（SPI）
+    ├── MysqlStoragePlugin（默认）
+    ├── PostgresqlStoragePlugin（3.x 新增）
+    └── TiDBStoragePlugin（社区贡献）
+```
+
+**迁移影响**：
+- 现有 MySQL 数据可直接迁移
+- 表结构有调整，需执行迁移脚本
+- Derby 彻底移除（不再支持）
+
+### 16.3 API 迁移（`/v1/` → `/v3/`）
+
+```
+# 2.x（仍可用，但标记 deprecated）
+GET /nacos/v1/cs/configs?dataId=xxx&group=xxx
+
+# 3.x（推荐）
+GET /nacos/v3/console/cs/config?dataId=xxx&group=xxx&namespaceId=xxx
+```
+
+**迁移建议**：
+- 客户端 SDK 升级到 3.x 版本后自动适配
+- 直接调用 HTTP API 的场景需手动迁移
+- `/v1/` 接口在 3.x 中保留兼容，但未来版本可能移除
+
+### 16.4 与云原生生态集成
+
+**K8s 原生支持**：
+```yaml
+# Nacos Operator（3.x 官方支持）
+apiVersion: nacos.io/v1alpha1
+kind: NacosCluster
+metadata:
+  name: nacos-cluster
+spec:
+  replicas: 3
+  storage:
+    type: mysql
+    mysqlHost: mysql-service
+```
+
+**Service Mesh 集成**：
+- 与 Istio 双向同步服务注册信息
+- 支持 xDS 协议，作为 Istio 的服务发现后端
+
+**AI 配置管理（探索中）**：
+- 与 Spring AI 集成，动态下发 LLM 模型参数（temperature、max_tokens 等）
+- 支持 A/B 测试配置，灰度切换不同模型
+
+### 16.5 面试加分点
+
+**Q：你了解 Nacos 3.x 的主要变化吗？**
+
+> Nacos 3.x 主要有三大变化：  
+> ① **存储层解耦**：通过 SPI 支持 PostgreSQL/TiDB，彻底移除 Derby；  
+> ② **API 统一**：迁移到 `/v3/` REST 风格，`/v1/` 标记 deprecated；  
+> ③ **安全增强**：内置细粒度 RBAC、审计日志、配置加密，解决 2.x 的安全短板。  
+> 目前（2026）3.x 已进入 GA 阶段，新项目可以考虑直接使用。
+
+---
+
+*文档更新时间：2026-03-05*  
+*对应源码版本：Nacos 2.x（主线）/ 3.x（演进参考）*  
+*⚡ 时效性说明：1.x 相关内容（UDP Push、HTTP 心跳、长轮询）仅作历史参考，生产环境请使用 2.x+*
